syntax = "proto3";

package onight.zjfae.afront.gens.v3;

option java_outer_classname="QuerySystemDict";
//Generated By BrewRobot:Wed May 17 16:13:05 CST 2017

message PBIFE_query_querySystemDict{
	
	message SystemDictObject{
	string paraCode = 1; //,参数编码,String,不校验,否,,
	string paraName = 2; //,参数名,String,不校验,否,,
	string paraValue = 3; //,参数值,String,不校验,否,,
	string remark = 4; //,备注,String,不校验,否,,
	}

	SystemDictObject systemDict=1;

	string senseFlag=2; //智能无感知标识

}

message Ret_PBIFE_query_querySystemDict{
	
	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_query_querySystemDict data=3;


}

message REQ_PBIFE_query_querySystemDict{
	
	string paramCode = 1; //,参数编码,String,不校验,否,,
	
	string version = 2;//,版本,String,不校验,否

}