syntax = "proto3";

package onight.zjfae.afront.gens;

option java_outer_classname="QueryMyKqQuan";

//Generated By BrewRobot:Wed Oct 19 09:49:18 CST 2016

message PBIFE_trade_queryMyKqQuan{
	///ife/trade/queryMyKqQuan.html
	message BaoList{
		string quanDetailsId = 1;	 //,卡券编号,String,不校验,是,KD＋X＋6位大序号＋时间后三位;X为红包R;满减F;加息A;抵价L;其他T
		string quanType = 2;	 //,卡券类型,String,不校验,是,
		string quanTypeName = 3;	 //,卡券类型名称,String,不校验,是,
		string quanValue = 4;	 //,卡券面值,String,不校验,是,
		string quanCanStack = 5;	 //,是否可叠加,String,不校验,是,0-不可叠加;1-可叠加
		string quanValidityEnd = 6;	 //,卡券有效结束日期,String,不校验,是,格式yyyy年MM月dd日
		string quanIncreaseInterestAmount = 7;	 //,最高可使用加息本金,String,不校验,是,
		string enableIncreaseInterestAmount = 8;	 //,可加息本金,String,不校验,是,
		string quanFullReducedAmount = 9;	 //,满减金额,String,不校验,是,
		string quanCatalogRemark = 10;	 //,卡券使用说明,String,不校验,是,
		string percentValue = 11;	 //,加息利息,String,不校验,是,百分数格式对应 quanValue为小数
		string quanArrivalPriceLadder = 12;//,抵价阶梯,String,不校验,是,
		string quanName = 13;	//,卡劵名称,String,不校验,是,
		string mostFineFlag = 14;	//,最优标记标记，1：最优；0：非最优,String,不校验,是,
	}

	message QuanList{
		string quanDetailsId = 1;	 //,卡券编号,String,不校验,是,KD＋X＋6位大序号＋时间后三位;X为红包R;满减F;加息A;抵价L;其他T
		string quanType = 2;	 //,卡券类型,String,不校验,是,
		string quanTypeName = 3;	 //,卡券类型名称,String,不校验,是,
		string quanValue = 4;	 //,卡券面值;其他元加息原样,String,不校验,是,
		string quanCanStack = 5;	 //,是否可叠加,String,不校验,是,0-不可叠加;1-可叠加
		string quanValidityEnd = 6;	 //,卡券有效结束日期,String,不校验,是,格式yyyy年MM月dd日
		string quanIncreaseInterestAmount = 7;	 //,最高可使用加息本金,String,不校验,是,
		string enableIncreaseInterestAmount = 8;	 //,可加息本金,String,不校验,是,
		string quanFullReducedAmount = 9;	 //,满减金额,String,不校验,是,
		string quanCatalogRemark = 10;	 //,卡券使用说明,String,不校验,是,
		string percentValue = 11;	 //,加息利息,String,不校验,是,百分数格式对应 quanValue为小数
		string quanArrivalPriceLadder = 12;//,抵价阶梯,String,不校验,是,
		string quanName = 13;	//,卡劵名称,String,不校验,是,
		string mostFineFlag = 14;	//,最优标记标记，1：最优；0：非最优,String,不校验,是,
	}


	repeated QuanList quanList = 1;

	repeated BaoList baoList = 2;

	string quanSize = 3; //,可用卡劵数量,String,不校验,是,

	string baoSize = 4; //,可用红包数量,String,不校验,是,

	string totalSize = 5; //,可用卡劵和红包总数量,String,不校验,是,


}

message Ret_PBIFE_trade_queryMyKqQuan{
	///ife/trade/queryMyKqQuan.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_trade_queryMyKqQuan data=3;


}

message REQ_PBIFE_trade_queryMyKqQuan{
	///ife/trade/queryMyKqQuan.html

	string productCode = 1; //,产品编号,String,不校验,否,

	string serialNo = 2; //,产品系列,String,不校验,否,

	string delegateNum = 3; //,转让金额,String,不校验,否,单位元

	string bussType = 4; //,卡劵业务类型,String,不校验,否,10001-活动中奖;10002-认购撤单;10003-起息失败;10004-冲正定时任务;10005-领全局券;01001-提现;01002-认购;01003-受让

	string delegationCode = 5; //,转让编号,String,不校验,否,

	string kqType = 6;//,卡券类型,String,不校验,否,多个时用|分隔;默认查：R|F|L|A;R－红包;F-满减;L-抵价;A-加息;T-其他


}