syntax = "proto3";

package onight.zjfae.afront.gens;

option java_outer_classname="ProductPlay";

//Generated By BrewRobot:Thu Dec 07 11:38:23 CST 2017

message PBIFE_trade_rengou{
	///ife/trade/rengou.html

	string delegationCode = 1; //,成交编号,String,不校验,否,


}

message Ret_PBIFE_trade_rengou{
	///ife/trade/rengou.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_trade_rengou data=3;


}

message REQ_PBIFE_trade_rengou{
	///ife/trade/rengou.html

	string productCode = 1; //,产品编号,String,不校验,否,

	string delegateNum = 2; //,购买金额,String,不校验,否,

	string password = 3; //,交易密码,String,不校验,否,

	string payType = 4; //,支付类型,String,不校验,否,

	string channelNo = 5; //,渠道号,String,不校验,是,

	string repeatCommitCheckCode = 6; //,重复提交校验码,String,不校验,否,

	string kqCode = 7; //,卡劵编号,String,不校验,否,

	string kqType = 8; //,卡券类型,String,不校验,否,

	string kqValue = 9; //,卡券值(单位分);其他分加息劵原样,String,不校验,否,

	string kqAddRatebj = 10; //,加息本金,String,不校验,否,

	string remainBuyAmount = 11; //,剩余可购金额,String,不校验,否,
	
	string checkCode = 12;//  ,短信验证码,String,不校验,否,

	string checkCodeSerialNo = 13;//  ,验证码序列号,String,不校验,否,


}