syntax = "proto3";

package onight.zjfae.afront.gens.v5;

//Generated By BrewRobot:Sun May 22 20:03:28 CST 2016

message PBIFE_trade_transferOrder{
	///ife/trade/transferOrder.html

	string delegationCode = 1; //,成交编号,String,不校验,否,
	string productCode = 2; //,产品编号,String,不校验,否,
	string actualRate = 3; //,挂卖利率,String,不校验,否,
	


}

message Ret_PBIFE_trade_transferOrder{
	///ife/trade/transferOrder.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_trade_transferOrder data=3;


}

message REQ_PBIFE_trade_transferOrder{
	///ife/trade/transferOrder.html

	string delegationCode = 1; //,委托编号,String,不校验,否,

	string buyNum = 2; //,购买数量,String,不校验,否,

	string repeatCommitCheckCode = 3; //,重复提交校验码,String,不校验,否,

	string channelNo = 4; //,渠道,String,不校验,否,

	string payType = 5; //,支付类型,String,不校验,否,

	string password = 6; //,交易密码,String,不校验,否,
	
	string kqCode = 7;//,卡劵编号,String,不校验,否,
	
	string kqType = 8;//,卡券类型,String,不校验,否,
	
	string kqValue = 9;//,卡券值(单位分),String,不校验,否,
	
	string kqAddRatebj = 10;//,加息本金,String,不校验,否,
	
	string checkCode = 11;//  ,短信验证码,String,不校验,否,

	string checkCodeSerialNo = 12;//  ,验证码序列号,String,不校验,否,
	
	string authCode = 13; // 图片验证码,String,不校验,否,
	
	string token=14;//网易盾token,String,不校验,否,
	
	string mobile=15;//手机号,String,不校验,否,

	string mode=16;//网易盾上送方式（0：滑动；1：点选；2：图形验证码）

    string version = 17;//版本号

    string ignoreCaptchaVerifier = 18;// 忽略验证码验证
}